compiling_error.txt
working.cc: In function 'int main()':
working.cc:33:36: error: no matching function for call to 'getline(std::istream&, int&)'
       getline(cin, initLocations[i]);
                                    ^
working.cc:33:36: note: candidates are:
In file included from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\string:53:0,
                 from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\locale_classes.h:40,
                 from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\ios_base.h:41,
                 from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\ios:42,
                 from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\ostream:38,
                 from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\iostream:39,
                 from working.cc:1:
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\basic_string.tcc:1068:5: note: template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::getline(std::basic_istream<_CharT, _Traits>&, std::basic_string<_CharT, _Traits, _Alloc>&, _CharT)
     getline(basic_istream<_CharT, _Traits>& __in,
     ^
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\basic_string.tcc:1068:5: note:   template argument deduction/substitution failed:
working.cc:33:36: note:   mismatched types 'std::basic_string<_CharT, _Traits, _Alloc>' and 'int'
       getline(cin, initLocations[i]);
                                    ^
In file included from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\string:52:0,
                 from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\locale_classes.h:40,
                 from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\ios_base.h:41,
                 from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\ios:42,
                 from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\ostream:38,
                 from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\iostream:39,
                 from working.cc:1:
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\basic_string.h:2793:5: note: template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::getline(std::basic_istream<_CharT, _Traits>&, std::basic_string<_CharT, _Traits, _Alloc>&)
     getline(basic_istream<_CharT, _Traits>& __is,
     ^
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\basic_string.h:2793:5: note:   template argument deduction/substitution failed:
working.cc:33:36: note:   mismatched types 'std::basic_string<_CharT, _Traits, _Alloc>' and 'int'
       getline(cin, initLocations[i]);
                                    ^
